Fix grid alignments

--- a/src/containers/PageBuilder/BlockBuilder/BlockFooter/BlockFooter.module.css
+++ b/src/containers/PageBuilder/BlockBuilder/BlockFooter/BlockFooter.module.css
@@ -17,9 +17,20 @@
 
 .text {
   width: 100%;
-  margin-top: 20px;
 
   &:first-child {
     margin-top: 0;
+  }
+
+  & a {
+    display: block;
+  }
+
+  & ol {
+    margin-top: 0px;
+  }
+
+  & p {
+    padding: 0px;
   }
 }
